청구생성 장기/단기 필터 추가 + 세금계산서 체크박스 다운로드/수정 기능
- BillingCreateRequest: contractCategory(장기/단기/전체) 필드 추가
- ContractRepository: findContractNumbersByContractCategory 쿼리 추가
- BillingService: contractCategory 필터 적용 (비어있으면 전체)
- TaxInvoicePreviewRow: scheduleId(PaymentSchedules.id) 필드 추가
- TaxInvoiceUpdateRequest/TaxInvoiceDownloadSelectedRequest DTO 신규 생성
- TaxInvoiceService: preview에 scheduleId 반영, previewByIds() 및 update() 메서드 추가
- TaxInvoiceController: PUT /{scheduleId} 수정 엔드포인트, POST /download-selected 선택다운로드 엔드포인트 추가
- billing_create.html: 계약구분 셀렉트(전체/장기/단기) 추가, payload에 contractCategory 포함
- tax_invoice_issue.html: 행 체크박스+전체선택, 선택다운로드 버튼, 인라인 수정(발행일자/공급가액/세액) 기능 추가

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>